# glpp

./: CMakeLists.txt  README.md
demos/: CMakeLists.txt  basic-demo.cpp
include/glpp/: buffer.hpp  errors.hpp  gl-backend.hpp  program.hpp  shader.hpp  types.hpp  unique.hpp  vertexarray.hpp
